--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "description here",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+	"test": "node test.js"
   },
   "author": "Divyansh Singh",
   "license": "ISC",
